spacing fixes

--- a/Resources/Components/Splash/Splash.styl
+++ b/Resources/Components/Splash/Splash.styl
@@ -73,7 +73,7 @@ div.splash
         top: 36px
         
         @media screen and (min-width: tablet)
-            top: 100px
+            top: 50px
         
     div.big-button
         //position
